fixed cropping issue with the draggable component

--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100vh; /* Full viewport height */
   /* padding: 100px 0; */
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
   display: flex;
   flex-direction: column;
   align-items: center; /* Centers content vertically */
